chore: add Docker Compose files for development and testing environments, update .gitignore for test environment variables

--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -4,11 +4,11 @@ services:
     ports:
       - ${DATABASE_PORT}:5432
     volumes:
-      - hey-learn-db:/var/lib/postgresql/data
+      - hey-learn-db-dev:/var/lib/postgresql/data
     environment:
       POSTGRES_USER: ${DATABASE_USERNAME}
       POSTGRES_PASSWORD: ${DATABASE_PASSWORD}
       POSTGRES_DB: ${DATABASE_NAME}
 
 volumes:
-  hey-learn-db:
+  hey-learn-db-dev:
