--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "test:watch": "NODE_ENV=test jest --watch",
     "test:cov": "NODE_ENV=test jest --coverage",
     "test:debug": "NODE_ENV=test node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "NODE_ENV=test jest --config ./test/jest-e2e.json"
+    "test:e2e": "NODE_ENV=test jest --config ./test/jest-e2e.json",
+    "db:drop": "NODE_ENV=dev typeorm-ts-node-commonjs schema:drop -d ./typeorm.config.ts"
   },
   "dependencies": {
     "@faker-js/faker": "^9.4.0",
@@ -29,6 +30,7 @@
     "@nestjs/typeorm": "^11.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "dotenv": "^16.4.7",
     "openai": "^4.85.4",
     "pg": "^8.13.1",
     "reflect-metadata": "^0.2.2",
