--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "test:cov": "NODE_ENV=test jest --coverage",
     "test:debug": "NODE_ENV=test node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "NODE_ENV=test jest --config ./test/jest-e2e.json",
-    "db:drop": "NODE_ENV=dev typeorm-ts-node-commonjs schema:drop -d ./typeorm.config.ts"
+    "db:drop": "NODE_ENV=dev typeorm-ts-node-commonjs schema:drop -d ./typeorm.config.ts",
+    "db:sync": "NODE_ENV=dev typeorm-ts-node-commonjs schema:sync -d ./typeorm.config.ts"
   },
   "dependencies": {
     "@faker-js/faker": "^9.4.0",
